# homebrain

./: .env.template  .gitignore  README.md  docker-compose.dev.yaml  docker-compose.yaml  tsconfig.json  vite.config.ts
backend/: .env.template  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/.devcontainer/: devcontainer.json
backend/app/: bootstrap.py  config.py  graph.py  lifespan.py  main.py  persistence.py  schema.py  settings.py  state.py
backend/app/agents/: README.md  router_agent_node.py
backend/app/agents/homebrain/: graph.py  state.py
backend/app/agents/personal/: nodes.py
backend/app/agents/rag/: graph.py  ingest.py  nodes.py  state.py  vectorstore.py
backend/app/agents/status/: nodes.py  state.py  tools.py
backend/app/agents/utc-time/: graph.py  nodes.py  state.py  tools.py
backend/app/agents/utils/: messages.py
backend/app/api/: chat.py  deps.py  routes_chat.py  sessions.py
backend/app/core/: config.py  graph.py
backend/app/db/: __init__.py  core.py
backend/app/llms/: gemini.py
backend/app/models/: chat.py  orm_models.py  schema.py  schemas.py
backend/app/nodes/: README.md
backend/app/routers/: status_router.py
backend/app/schemas/: api.py  events.py  routing.py
backend/app/services/: chat.py  formatting.py  homebrain_brain.py  messages.py  session_store.py
backend/app/util/: messages.py
backend/app/utils/: messages.py
backend/app/workflow/nodes/: finalize.py  ingest.py  router.py
backend/app/workflow/utils/: messages.py
backend/tests/: conftest.py
backend/tests/api/: test_chat_stream.py
(+21 files in other folders)
