[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "python-dotenv",
  "pydantic",
  "pydantic-settings",
  "sqlalchemy>=2.0",
  "psycopg[binary]",
  "langchain",
  "langgraph",
  "langchain-chroma",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]